fix nav hover on small devices

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -425,7 +425,7 @@ button[disabled="true"] img {
   .email-parent {
     font-size: 2vw;
   }
-  nav a:hover,
+
   .impact-card,
   .innov-container p,
   .sub-btn {
@@ -513,7 +513,6 @@ button[disabled="true"] img {
   .mag-card {
     font-size: 4vw;
   }
-  nav a:hover,
   .impact-card,
   .innov-container p,
   .sub-btn {
